<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    style="@style/common_bg"  >
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/common_title"
            android:background="@drawable/common_title_bg_no_shadow" 
            android:text="@string/account_title"/>
    </LinearLayout>
    
    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"> 
        
        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_account_listview_header">  
            <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"
                android:gravity="left" >
             	  <TextView android:textSize="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:textColor="@color/white" android:text="@string/properties" />
      			  <TextView  android:layout_gravity="center" android:textSize="18.0dip" android:textColor="#ffffffff" android:id="@+id/properties_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/calculating" />
            </LinearLayout>
            
            <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"
                android:gravity="left" >
             	<TextView android:textSize="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:textColor="@color/white" android:text="@string/debts" />
       			<TextView android:layout_gravity="center" android:textSize="18.0dip" android:textColor="#ffffffff" android:id="@+id/debts_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/calculating" />
            </LinearLayout>
        
        </LinearLayout>
        
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0">     
            <ListView 	 android:id="@+id/account_lv"
            	android:layout_width="fill_parent" android:layout_height="fill_parent"
                android:choiceMode="singleChoice" style="@style/list_view_for_setting"
                android:visibility="gone">
            </ListView>  
                
            <TextView android:id="@+id/listview_loading_tv" style="@style/common_lv_loading_tv" />
        </LinearLayout>
        
         <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"    
            style="@style/common_add_toolbar" >
            
            <Button android:id="@+id/add_account_btn" style="@style/common_toolbar_btn"  android:layout_marginRight="10.0dip" android:text="@string/add_account" />"
            <Button android:id="@+id/transfer_btn"  style="@style/common_toolbar_btn" android:layout_marginLeft="10.0dip" android:text="@string/transfer"  />   
        </LinearLayout>
  
    </LinearLayout>
</LinearLayout>
  <!--  android:layout_width="fill_parent" android:layout_height="fill_parent" -->  