<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    style="@style/common_bg"  
    android:orientation="vertical" >
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_weight="35.4"
	    android:layout_height="0px"
	    android:orientation="horizontal"
	    android:paddingLeft="12.0px" 
	    android:paddingTop="27.0px"
	    android:paddingBottom="27.0px">
	    <LinearLayout
	        android:id="@+id/month_expense_ly"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:focusable="true"
	        android:clickable="true"
	        android:orientation="vertical">
	         <LinearLayout 
	             android:orientation="horizontal" 
	             android:layout_width="fill_parent" 
	             android:layout_height="0px"
	             android:layout_weight="1.5"
  				android:paddingLeft="35dp"
	             android:paddingTop="20dp"
	              android:paddingBottom="5dp"   >

                <TextView
                    android:id="@+id/month_tv"
                    style="@style/main_budget_lable_hdpi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                  
                    android:textSize="25.0dip"
                    android:textStyle="bold" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/month_unit" android:textSize="25.0dip"/>
               
            </LinearLayout>
           
            <LinearLayout 
                android:layout_width="fill_parent"
                 android:layout_height="0px"
                 android:layout_weight="1"
                 android:layout_gravity="top"
                 android:orientation="horizontal">
                  <TextView android:text="@string/income_amount" android:textColor = "@color/white" style="@style/main_money_label_hdpi" />
                  <TextView android:id="@+id/income_amount_tv" style="@style/main_money_hdpi" android:textColor="@color/white"/>
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="fill_parent"
                 android:layout_height="0px"
                 android:layout_weight="1"
                 android:orientation="horizontal">
                  <TextView android:text="@string/expenses_amount" style="@style/main_money_label_hdpi" android:textColor = "@color/white" />
                  <TextView android:id="@+id/expense_amount_tv" style="@style/main_money_hdpi" android:textColor="@color/white"/>
            </LinearLayout>
            
            <LinearLayout 
                android:layout_width="fill_parent"
                   android:layout_weight="1"
                 android:layout_height="0px"
                 android:orientation="horizontal">
                  <TextView android:text="@string/budget_amount" style="@style/main_money_label_hdpi" android:textColor = "@color/white" />
                  <TextView android:id="@+id/budget_balance_amount_tv" style="@style/main_money_hdpi" android:textColor="@color/white"/>
            </LinearLayout>
		</LinearLayout>
		
		<!-- process bar -->
		
	</LinearLayout >
	
	<LinearLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="17" android:orientation="vertical">"
		<Button android:background="@drawable/common_transparence" android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="1"/>
		<Button android:layout_gravity="center_horizontal" android:id="@+id/add_expense_quickly_btn" android:background="@drawable/main_add_expense_quickly" android:layout_width="wrap_content" android:layout_height="0px" android:layout_weight="3"  />
		<Button android:background="@drawable/common_transparence" android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="1"/>
	</LinearLayout>
	
	
	<LinearLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="36.8" android:layout_marginTop="18.0px" android:orientation="vertical">
	      <LinearLayout android:orientation="vertical" android:layout_width="fill_parent"  android:layout_height="0px" android:layout_weight="1" >          
	          <RelativeLayout android:orientation="horizontal" android:id="@+id/today_row_rl" style="@style/row_stat_hdpi" android:layout_height="0px" android:layout_weight="1">
	              <FrameLayout android:id="@+id/today_icon_fl" style="@style/main_row_stat_icon_hdpi">
	                   <ImageView android:layout_gravity="center_vertical" android:id="@+id/today_icon_iv" android:background="@drawable/main_today" android:layout_width="wrap_content" android:layout_height="wrap_content" />
	                   <TextView android:textColor="@color/black" android:layout_gravity="center_horizontal" android:id="@+id/date_of_month_tv" android:paddingTop="15.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" />
	              </FrameLayout>
	              <LinearLayout android:layout_toRightOf="@+id/today_icon_fl" style="@style/main_row_stat_time_ly_hdpi">
	                   <TextView android:id="@+id/today_tv" android:text="@string/today_str" style="@style/main_row_stat_time_tips_hdpi" />
	                    <TextView android:id="@+id/today_datestr_tv" style="@style/main_row_stat_time_str_hdpi" />
	              </LinearLayout>
	            <TextView android:id="@+id/today_expense_amount_tv" style="@style/main_row_expense_amount_hdpi" />
                <TextView android:id="@+id/today_income_amount_tv" style="@style/main_row_income_amount_hdpi" />
                <ImageView style="@style/main_row_go_detail_hdpi" />
	          </RelativeLayout>
	          
	          <RelativeLayout android:orientation="horizontal" android:id="@+id/week_row_rl" style="@style/row_stat_hdpi" android:layout_height="0px" android:layout_weight="1">
	              <ImageView android:id="@+id/week_icon_iv" android:background="@drawable/main_week" style="@style/main_row_stat_icon_hdpi" />
	              <LinearLayout android:layout_toRightOf="@+id/week_icon_iv" style="@style/main_row_stat_time_ly_hdpi">
                    <TextView android:text="@string/week_str" style="@style/main_row_stat_time_tips_hdpi" />
                    <TextView android:id="@+id/week_datestr_tv" style="@style/main_row_stat_time_str_hdpi" />
                  </LinearLayout>
                  <TextView android:id="@+id/week_expense_amount_tv" style="@style/main_row_expense_amount_hdpi" />
                  <TextView android:id="@+id/week_income_amount_tv" style="@style/main_row_income_amount_hdpi" />
                <ImageView style="@style/main_row_go_detail_hdpi" />
	          </RelativeLayout>
	                
	       <RelativeLayout android:orientation="horizontal" android:id="@+id/month_row_rl" style="@style/row_stat_hdpi" android:layout_height="0px" android:layout_weight="1">
	              <ImageView android:id="@+id/month_icon_iv" android:background="@drawable/main_month" style="@style/main_row_stat_icon_hdpi" />
	              <LinearLayout android:layout_toRightOf="@+id/month_icon_iv" style="@style/main_row_stat_time_ly_hdpi">
                    <TextView android:text="@string/month_str" style="@style/main_row_stat_time_tips_hdpi" />
                    <TextView android:id="@+id/month_datestr_tv" style="@style/main_row_stat_time_str_hdpi" />
                  </LinearLayout>
                  <TextView android:id="@+id/month_expense_amount_tv" style="@style/main_row_expense_amount_hdpi" />
                  <TextView android:id="@+id/month_income_amount_tv" style="@style/main_row_income_amount_hdpi" />
                <ImageView style="@style/main_row_go_detail_hdpi"  />
	          </RelativeLayout>
		 </LinearLayout>       
	   </LinearLayout>  

       <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_weight="9" android:layout_height="0px">"
     	 <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="2.5">
     	   
            <Button android:id="@+id/add_expense_btn" android:background="@drawable/main_add_expense_btn" android:layout_width="0px" android:layout_weight="1" android:visibility="gone" style="@style/nav_btn_hdpi" />
            <Button android:id="@+id/nav_report_btn" android:background="@drawable/main_report_btn" android:layout_width="0px" android:layout_weight="1" android:visibility="gone" style="@style/nav_btn_hdpi" />
            <Button android:id="@+id/nav_account_btn" android:background="@drawable/main_account_btn" style="@style/nav_btn_hdpi" android:layout_width="0px" android:layout_weight="1" />"
            <Button android:id="@+id/nav_budget_btn" android:background="@drawable/main_budget_btn"  style="@style/nav_btn_hdpi"  android:layout_width="0px" android:layout_weight="1" />
            <Button android:id="@+id/nav_setting_btn" android:background="@drawable/main_setting_btn" style="@style/nav_btn_hdpi" android:layout_width="0px" android:layout_weight="1" android:visibility="gone"/>
           
        </LinearLayout>
         <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="1">
            <TextView android:id="@+id/add_expense_tv" android:visibility="gone" android:text="@string/nav_add_expense" style="@style/nav_text_hdpi" />
            <TextView android:id="@+id/nav_report_tv" android:text="@string/nav_report" android:visibility="gone" style="@style/nav_text_hdpi" />
            <TextView android:id="@+id/nav_account_tv" android:text="@string/nav_account" style="@style/nav_text_hdpi" />
            <TextView android:id="@+id/nav_budget_tv" android:text="@string/nav_budget" style="@style/nav_text_hdpi" />
            <TextView android:id="@+id/nav_setting_tv" android:text="@string/nav_setting" android:visibility="gone" style="@style/nav_text_hdpi" />
        </LinearLayout>
      </LinearLayout>
</LinearLayout>
